[TS134] Event listing Status by dates